add mimetype to all responses
