# src/utils/response.js
@@ -105,6 +105,7 @@ const binaryResponse = (res, imageBuffer, metadata, format, filename) => {
 
   // Set custom metadata headers (prefixed with X-Image-)
   res.setHeader('X-Image-Success', '1');
+  res.setHeader('X-Image-Mimetype', mimeType);
 
   // Add all metadata fields as custom headers
   Object.keys(metadata).forEach(key => {
